Update images, index

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="nextRound" ng-if="round !== maxRounds - 1">
             <div class="col-xs-12 col-md-12">
                 <button ng-click="nextRound()" type="button"
-                        class="btn btn-success btn-lg">עוד 10
+                        class="btn btn-success btn-lg">סיבוב חדש
                 </button>
             </div>
         </div>
