add google property tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <meta charset="utf-8"/>
+    <meta name="google-site-verification" content="SH_-YuxKI1oeWt41WaLq9V_pn2Rbpfu7FYFbXF4bbis" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="js/angular-lazy-img/release/angular-lazy-img.js"></script>
