--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <meta property="og:title" content="חי או מת?"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://haiomet.github.io/images/plato.jpg"/>
-    <meta property="og:image:secure_url" content="https://haiomet.github.io/images/plato.jpg"/>
+    <meta property="og:image" content="https://haiomet.github.io/images/shoshana-arbeli-almozelino.jpeg"/>
+    <meta property="og:image:secure_url" content="https://haiomet.github.io/images/shoshana-arbeli-almozelino.jpeg"/>
     <meta property="og:url" content="https://haiomet.github.io/"/>
     <meta property="og:site_name" content="חי או מת?"/>
     <meta property="og:description" content="החידון שמטריף את המדינה"/>
