--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="google-site-verification" content="SH_-YuxKI1oeWt41WaLq9V_pn2Rbpfu7FYFbXF4bbis" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="js/angular-lazy-img/release/angular-lazy-img.js"></script>
     <script src="data.js"></script>
     <script src="app.js"></script>
@@ -81,7 +82,7 @@
             </div>
         </div>
     </div>
-    <div class="row" style="margin-right: 40%;">
+    <div class="row" style="display: flex; justify-content: center">
         <div align='center'><a href='http://www.free-website-hit-counter.com'><img
                 src='http://www.free-website-hit-counter.com/c.php?d=9&id=103951&s=16' border='0'
                 title='free website hit counter'></a><br / >
